# softadastra_cpp_api

./: .env  .gitignore  CMakeLists.txt  README.txt
Crow/include/crow/: json.h
Crow/tests/: unittest.cpp
config/: Database.cpp  Database.hpp
config/data/: all_categories.json  leaf_categories.json  products.json  top_level_categories.json
include/: decltype_test.cpp  prog  test.cpp  variant_test.cpp
include/catalogue/components/brands/: ImageComponent.hpp  NameComponent.hpp
include/catalogue/components/product/: BrandIdComponent.hpp  CategoryIdComponent.hpp  ColorsComponent.hpp  ConditionIdComponent.hpp  CreatedAtComponent.hpp  CurrencyComponent.hpp  CustomFieldsComponent.hpp  DescriptionComponent.hpp  DynamicFieldComponent.hpp  ImagesComponent.hpp  IsActiveComponent.hpp  OriginalPriceComponent.hpp  PackageFormatIdComponent.hpp  PriceComponent.hpp  SimilarProductsComponent.hpp  SizesComponent.hpp  SlugComponent.hpp  StatusComponent.hpp  StockComponent.hpp  TitleComponent.hpp  UpdatedAtComponent.hpp  UserIdComponent.hpp  ViewsComponent.hpp
include/catalogue/ecs/: ComponentManager.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp
include/catalogue/entities/: EntityBuilder.hpp
include/catalogue/systems/: BrandSystem.hpp  ProductSystem.hpp
include/catalogue/validator/: ProductValidator.hpp
include/categories/: Category.hpp  CategoryRepositoryJson.hpp
include/categories/api/: category_routes.hpp
include/categories/models/: Category.hpp
include/categories/services/: CategoryCache.hpp  CategoryRepositoryJson.hpp
include/products/api/: product_routes.hpp
include/products/models/: Product.hpp
include/products/services/: ProductCache.hpp  ProductService.hpp
include/tools/: ImageOptimizer.hpp
include/utils/: EnvLoader.hpp  logger.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/catalogue/: CMakeLists.txt
src/catalogue/ecs/: ComponentManager.cpp  EntityManager.cpp  System.cpp  SystemManager.cpp
src/catalogue/entities/: EntityBuilder.cpp
src/catalogue/systems/: BrandSystem.cpp  ProductSystem.cpp
src/categories/: CMakeLists.txt  Category.cpp  CategoryRepositoryJson.cpp  category_routes.cpp
src/categories/api/: category_routes.cpp
src/categories/models/: Category.cpp
src/categories/services/: CategoryCache.cpp  CategoryRepositoryJson copy.cpp  CategoryRepositoryJson.cpp
src/payments/: CMakeLists.txt
src/products/: CMakeLists.txt
src/products/api/: product_routes.cpp
src/products/models/: Product.cpp
src/products/services/: ProductCache.cpp  ProductService.cpp
src/tools/: CMakeLists.txt  ImageOptimizer.cpp
src/utils/: CMakeLists.txt  EnvLoader.cpp  logger.cpp
test/: CMakeLists.txt  main_test.cpp
test/catalogue/: EntityBuilder_test.cpp
unittests/: CMakeLists.txt
unittests/categories/services/: test_category_repository_json.cpp
unittests/products/service/: test_product_service.cpp
